fix(docs): enhance documentation clarity and consistency across multiple files
This commit updates various documentation files to improve clarity and consistency. Changes include modifying iframe attributes for uniformity, correcting terminology in Maven profiles, updating image links, and restructuring support sections. These enhancements aim to provide a more coherent and user-friendly experience for readers.

--- a/deployment/docker.mdx
+++ b/deployment/docker.mdx
@@ -20,6 +20,7 @@ icon: "docker"
 ![Docker 部署架构概览](/images/docker-deployment/docker-overview.png)
 
 ## 官方镜像部署
+
 ```shell
 curl -o docker-compose.yaml https://try.pig4cloud.com
 
@@ -106,7 +107,8 @@ docker compose up -d
   请按照上述视频文档的操作进行，无需修改容器的 hosts，docker-compose 会根据容器名称自动处理。
 </Note>
 
-## ♥️ 获取支持
-<Card title="遇到问题？" horizontal icon="link" href="https://gitee.com/log4j/pig/issues">
+## 获取支持
+
+<Card title="遇到问题？" icon="link" href="https://gitee.com/log4j/pig/issues">
   如果您在使用过程中遇到任何问题、有功能建议或需求，请点击此卡片前往 Gitee 仓库提交 Issue。
 </Card>
