--- a/deployment/linux.mdx
+++ b/deployment/linux.mdx
@@ -8,7 +8,7 @@ iconType: "brands"
 ### ① 购买 ECS
 
 <Note>
-特别说明：开发环境、测试环境强烈建议选择【ECS 按量付费】[👉🏻 《阿里云服务器 ECS 按量付费和包年包月有什么区别？》](https://developer.aliyun.com/article/1178762?source=5176.11533457&userCode=ueyxv2qf)
+特别说明：开发环境、测试环境强烈建议选择【ECS 按量付费】[《阿里云服务器 ECS 按量付费和包年包月有什么区别？》](https://developer.aliyun.com/article/1178762?source=5176.11533457&userCode=ueyxv2qf)
 </Note>
 
 <Card title="阿里云 ECS 购买" icon="link" href="https://www.aliyun.com/product/ecs?source=5176.11533457&userCode=ueyxv2qf">
@@ -216,10 +216,13 @@ server {
 - 5020 监控（如需访问 monitor 需要）
 </Warning>
 
-![](/images/1600526129960-ccee8fcd-1db8-4597-a9ab-411b0ea84f67.png)
+<Frame caption="ECS 安全组配置">
+  <img src="/images/1600526129960-ccee8fcd-1db8-4597-a9ab-411b0ea84f67.png" />
+</Frame>
 
-## ♥️ 获取支持
-<Card title="遇到问题？" horizontal icon="link" href="https://gitee.com/log4j/pig/issues">
+## 获取支持
+
+<Card title="遇到问题？" icon="link" href="https://gitee.com/log4j/pig/issues">
   如果您在使用过程中遇到任何问题、有功能建议或需求，请点击此卡片前往 Gitee 仓库提交 Issue。
 </Card>
 
