--- a/deployment/version-branch.mdx
+++ b/deployment/version-branch.mdx
@@ -5,36 +5,44 @@ iconType: "solid"
 ---
 
 在进行新项目的技术选型时，推荐 Java17 + SpringBoot3 + Vue3 的技术栈。
-1. Java17：Java17 相较于 Java8，Java17 带来了许多性能上的改进和优化。通过平滑升级到 Java17，您可以享受到更好的性能和稳定性，同时仍然可以**保持与旧版本的兼容性**。
-2. SpringBoot3：最新版本的 SpringBoot3 可以保证项目在功能和性能上的最新更新，并且官方将于 2023-11 停止 SpringBoot 2.X 的更新和维护，**避免后续的安全漏洞**。
-3. Vue3：相比于 Vue2，Vue3 在性能和灵活度方面有了显著的提升。它采用了更加精简的代码结构，使得**开发过程更高效**，并提供了一些新的特性和工具，有助于提升用户体验和开发效率。
 
-<Accordion title="SpringBoot 3 版本">
-核心技术栈：Java17、SpringBoot 3.4、Spring Cloud 2024、Vue3
+1. **Java17**：Java17 相较于 Java8，带来了许多性能上的改进和优化。通过平滑升级到 Java17，您可以享受到更好的性能和稳定性，同时仍然可以**保持与旧版本的兼容性**。
+2. **SpringBoot3**：最新版本的 SpringBoot3 可以保证项目在功能和性能上的最新更新，并且官方将于 2023-11 停止 SpringBoot 2.X 的更新和维护，**避免后续的安全漏洞**。
+3. **Vue3**：相比于 Vue2，Vue3 在性能和灵活度方面有了显著的提升。它采用了更加精简的代码结构，使得**开发过程更高效**，并提供了一些新的特性和工具，有助于提升用户体验和开发效率。
 
-<Card title="前端仓库" icon="link" href="https://gitee.com/log4j/pig-ui">
-  SpringBoot 3 版本的前端代码仓库
-</Card>
+<AccordionGroup>
+  <Accordion title="SpringBoot 3 版本">
+    核心技术栈：Java17、SpringBoot 3.4、Spring Cloud 2024、Vue3
 
-<Card title="后端仓库" icon="link" href="https://gitee.com/log4j/pig/tree/next-sa">
-  SpringBoot 3 版本的后端代码仓库
-</Card>
-</Accordion>
+    <CardGroup>
+      <Card title="前端仓库" icon="link" href="https://gitee.com/log4j/pig-ui">
+        SpringBoot 3 版本的前端代码仓库
+      </Card>
 
-<Accordion title="SpringBoot 2 版本">
-核心技术栈：Java8、SpringBoot 2.7、Spring Cloud 2021、Vue3
+      <Card title="后端仓库" icon="link" href="https://gitee.com/log4j/pig/tree/next-sa">
+        SpringBoot 3 版本的后端代码仓库
+      </Card>
+    </CardGroup>
+  </Accordion>
 
-<Card title="前端仓库" icon="link" href="https://gitee.com/log4j/pig-ui/tree/master/">
-  SpringBoot 2 版本的前端代码仓库
-</Card>
+  <Accordion title="SpringBoot 2 版本">
+    核心技术栈：Java8、SpringBoot 2.7、Spring Cloud 2021、Vue3
 
-<Card title="后端仓库" icon="link" href="https://gitee.com/log4j/pig/tree/master">
-  SpringBoot 2 版本的后端代码仓库
-</Card>
-</Accordion>
+    <CardGroup>
+      <Card title="前端仓库" icon="link" href="https://gitee.com/log4j/pig-ui/tree/master/">
+        SpringBoot 2 版本的前端代码仓库
+      </Card>
 
-## ♥️ 获取支持
-<Card title="遇到问题？" horizontal icon="link" href="https://gitee.com/log4j/pig/issues">
+      <Card title="后端仓库" icon="link" href="https://gitee.com/log4j/pig/tree/master">
+        SpringBoot 2 版本的后端代码仓库
+      </Card>
+    </CardGroup>
+  </Accordion>
+</AccordionGroup>
+
+## 获取支持
+
+<Card title="遇到问题？" icon="link" href="https://gitee.com/log4j/pig/issues">
   如果您在使用过程中遇到任何问题、有功能建议或需求，请点击此卡片前往 Gitee 仓库提交 Issue。
 </Card>
 
