--- a/deployment/k8s.mdx
+++ b/deployment/k8s.mdx
@@ -11,7 +11,7 @@ iconType: "solid"
   title="Kubernetes 部署教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 # 准备 KubeSphere 环境
@@ -49,8 +49,9 @@ registry.cn-hangzhou.aliyuncs.com/pigx/pig-quartz:latest
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-ui:latest
 ```
 
-## ♥️ 获取支持
-<Card title="遇到问题？" horizontal icon="link" href="https://gitee.com/log4j/pig/issues">
+## 获取支持
+
+<Card title="遇到问题？" icon="link" href="https://gitee.com/log4j/pig/issues">
   如果您在使用过程中遇到任何问题、有功能建议或需求，请点击此卡片前往 Gitee 仓库提交 Issue。
 </Card>
 
