fix(docs): improve warning message formatting in Docker deployment documentation
This commit enhances the clarity of the warning message in the Docker deployment documentation by restructuring the text for better readability. The changes ensure that the environment requirements are clearly stated, improving the overall user experience.

--- a/deployment/docker.mdx
+++ b/deployment/docker.mdx
@@ -14,7 +14,8 @@ icon: "docker"
 ></iframe>
 
 <Warning>
-  由于 PIG v3 使用镜像分层技术，Docker 版本必须为 19.x+ 以上版本。本教程环境要求：Linux CentOS 7 / 2 核 8G 内存。
+  由于 PIG v3 使用镜像分层技术，Docker 版本必须为 19.x+ 以上版本。  
+  本教程环境要求：Linux CentOS 7 / 2 核 8G 内存。
 </Warning>
 
 ![Docker 部署架构概览](/images/docker-deployment/docker-overview.png)
