--- a/deployment/k8s.mdx
+++ b/deployment/k8s.mdx
@@ -7,7 +7,7 @@ iconType: "solid"
 <iframe
   width="100%"
   height="500"
-  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=38&page=38"
+  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=38&page=38&autoplay=0"
   title="Kubernetes 部署教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
