fix(docs): add note about potential access issues for international users
This commit adds a note in the documentation regarding potential access issues for users in China when accessing the document and images hosted on foreign services. The update aims to inform users about possible loading problems and suggests changing networks if issues arise.

--- a/index.mdx
+++ b/index.mdx
@@ -11,6 +11,8 @@ iconType: "solid"
 <Tip>
 本文档内容由 pig4cloud 团队整理完成，转载请联系我们。文档内容持续更新，[问题反馈](http://issue.pig4cloud.com)。
 
+**文档、图床**：本文档和图片使用国外服务托管，国内部分运营商访问可能缓慢或无法访问，如遇加载问题请更换网络。
+
 **商业用户注意**：本文档内容不适配 PIG 商业产品，[商业版文档](https://pig4cloud.com/data/doc/pigx/) 请单独获取。
 </Tip>
 
