fix(docs): add GitCode links to project documentation
This commit updates the project documentation by adding links to the GitCode platform for both the backend and frontend code sections. These additions aim to provide users with more access points to the project's resources.

--- a/index.mdx
+++ b/index.mdx
@@ -40,6 +40,7 @@ iconType: "solid"
     |---|---|
     | Gitee | [https://gitee.com/log4j/pig](https://gitee.com/log4j/pig) |
     | Github | [https://github.com/pig-mesh/pig](https://github.com/pig-mesh/pig) |
+    | GitCode | [https://gitcode.com/pig-mesh/pig](https://gitcode.com/pig-mesh/pig) |
   </Tab>
   
   <Tab title="前端代码">
@@ -47,6 +48,7 @@ iconType: "solid"
     |---|---|
     | Gitee | [https://gitee.com/log4j/pig-ui](https://gitee.com/log4j/pig-ui) |
     | Github | [https://github.com/pig-mesh/pig-ui](https://github.com/pig-mesh/pig-ui) |
+    | GitCode | [https://gitcode.com/pig-mesh/pig-ui](https://gitcode.com/pig-mesh/pig-ui) |
   </Tab>
 </Tabs>
 
