--- a/dev/integration/pig-rocketmq-integration.mdx
+++ b/dev/integration/pig-rocketmq-integration.mdx
@@ -5,7 +5,7 @@ title: "PIG 整合 RocketMQ 集成指南"
 <iframe
   width="100%"
   height="500"
-  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=13&page=13"
+  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=13&page=13&autoplay=0"
   title="RocketMQ 集成视频教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
