fix(docs): enhance guidance on asking questions in the community FAQ
This commit updates the FAQ section on how to ask questions effectively in the community. It adds a warning to avoid vague descriptions and emphasizes the importance of providing detailed information, including error messages and reproduction steps. Additionally, it refines the steps for gathering necessary information and includes a note on community etiquette regarding gratitude. These changes aim to improve the quality of inquiries and foster a more helpful community environment.

--- a/dev/faq/how-ask.mdx
+++ b/dev/faq/how-ask.mdx
@@ -8,29 +8,31 @@ title: "⚽️ 工单社区如何提问"
 
 ## 提问前的准备
 
+<Warning>
+提问时请避免使用模糊表述，如"不工作"、"有问题"、"报错"等。请详细描述：
+- 具体的错误信息或异常现象
+- 问题出现的具体步骤和场景
+- 提供完整的代码链路截图（从前端Vue组件到后端Controller、Service、Mapper等）
+- 相关的日志信息或控制台输出
+</Warning>
+
 <Steps>
   <Step title="搜索已有问题">
     在提问前，请先搜索文档和已有 issues，您的问题可能已经被解答。
   </Step>
   <Step title="收集必要信息">
-    准备好以下信息：
     - PIG 版本号、单体还是微服务、哪个分支的代码
     - 操作系统和环境信息
-    - 完整的错误日志
-    - 问题的复现步骤
+    - 完整的错误日志，问题的复现步骤
   </Step>
   <Step title="准备最小复现示例">
     如果可能，准备一个最小的代码示例来展示问题，这有助于快速定位问题。
   </Step>
 </Steps>
 
-<Warning>
-避免在问题描述中使用模糊的表述，如"不工作"、"有问题"等，请具体描述症状和表现。
-</Warning>
 
 ## 社群提问礼仪
 
 - 不要只发一句"有人在吗"，直接描述您的问题
-- 使用文字而非截图发送代码
-- 耐心等待回复，不要频繁催促
 - 问题解决后，分享解决方案以帮助他人
+- 红包不是解决问题的必要条件，但适当的感谢可以提高群成员的积极性
