fix(docs): refine guidance on providing detailed information in community inquiries
This commit updates the FAQ on how to ask questions in the community by specifying the need for detailed software version information and clarifying the steps for reporting issues. The changes aim to enhance the quality of inquiries and improve the overall support experience.

--- a/dev/faq/how-ask.mdx
+++ b/dev/faq/how-ask.mdx
@@ -10,8 +10,8 @@ title: "⚽️ 工单社区如何提问"
 
 <Warning>
 提问时请避免使用模糊表述，如"不工作"、"有问题"、"报错"等。请详细描述：
-- 具体的错误信息或异常现象
-- 问题出现的具体步骤和场景
+- 具体的软件版本、单体\微服务、本地开发环境
+- 具体的错误信息或异常现象、问题出现的具体步骤和场景
 - 提供完整的代码链路截图（从前端Vue组件到后端Controller、Service、Mapper等）
 - 相关的日志信息或控制台输出
 </Warning>
