fix(docs): update Nacos console URL in quick-start documentation

--- a/deployment/quick-start.mdx
+++ b/deployment/quick-start.mdx
@@ -71,7 +71,7 @@ db:
 
 #### 3.2 修改 Redis 和 MySQL 配置
 <Note>
-  访问 Nacos 控制台：[http://127.0.0.1:8848/nacos](http://127.0.0.1:8848/nacos#/configurationManagement) (默认账号密码：nacos/nacos)
+  ⚠️ nacos 3.0 端口是 8080 ，访问 Nacos 控制台：[http://127.0.0.1:8080](http://127.0.0.1:8080) (默认账号密码：nacos/nacos)
 </Note>
 
 <Frame>
