fix(docs): refine community inquiry guidelines for clarity and etiquette
This commit updates the FAQ on how to ask questions in the community by simplifying the language around vague descriptions and emphasizing the importance of clear problem statements. Additionally, it introduces a new tip regarding the role of gratitude in community interactions, aiming to enhance the overall quality of inquiries and foster a supportive environment.

--- a/dev/faq/how-ask.mdx
+++ b/dev/faq/how-ask.mdx
@@ -9,11 +9,7 @@ title: "⚽️ 工单社区如何提问"
 ## 提问前的准备
 
 <Warning>
-提问时请避免使用模糊表述，如"不工作"、"有问题"、"报错"等。请详细描述：
-- 具体的软件版本、单体\微服务、本地开发环境
-- 具体的错误信息或异常现象、问题出现的具体步骤和场景
-- 提供完整的代码链路截图（从前端Vue组件到后端Controller、Service、Mapper等）
-- 相关的日志信息或控制台输出
+提问看下边，别说一些没用的如"不工作"、"有问题"、"报错"等。问题描述要清晰，上下文要完整！
 </Warning>
 
 <Steps>
@@ -33,6 +29,10 @@ title: "⚽️ 工单社区如何提问"
 
 ## 社群提问礼仪
 
+<Tip>
+红包不是解决问题的必要条件，但适当的感谢可以提高群成员的积极性
+</Tip>
+
 - 不要只发一句"有人在吗"，直接描述您的问题
 - 问题解决后，分享解决方案以帮助他人
-- 红包不是解决问题的必要条件，但适当的感谢可以提高群成员的积极性
+
