fix(docs): streamline information collection steps in community inquiry guidelines
This commit refines the FAQ on how to ask questions by consolidating the information collection steps for clarity. It emphasizes the importance of providing comprehensive error logs and relevant environment details, aiming to enhance the quality of inquiries and facilitate quicker issue resolution.

--- a/dev/faq/how-ask.mdx
+++ b/dev/faq/how-ask.mdx
@@ -17,9 +17,8 @@ title: "⚽️ 工单社区如何提问"
     在提问前，请先搜索文档和已有 issues，您的问题可能已经被解答。
   </Step>
   <Step title="收集必要信息">
-    - PIG 版本号、单体还是微服务、哪个分支的代码
-    - 操作系统和环境信息
-    - 完整的错误日志，问题的复现步骤
+    - PIG 版本号、单体还是微服务、哪个分支的代码，操作系统和环境信息
+    - 完整的错误日志, 浏览器console、network, 后台IDEA 控制台报错日志, 等等
   </Step>
   <Step title="准备最小复现示例">
     如果可能，准备一个最小的代码示例来展示问题，这有助于快速定位问题。
