--- a/info/development-participation.mdx
+++ b/info/development-participation.mdx
@@ -12,133 +12,85 @@ iconType: "solid"
 - 💡 **创意实现**：提出并实现创新功能，定义微服务开发新标准
 - 🤝 **精英协作**：与 GVP 项目核心团队并肩作战，获得资深架构师代码评审
 
-### 贡献形式多样任您选：
-- **代码贡献**：从 [Good First Issue](https://gitee.com/log4j/pig/issues) 开始，逐步深入核心模块开发
-- **文档优化**：完善使用手册、编写技术博客、录制教学视频
-- **质量护航**：参与代码审查、编写单元测试、进行漏洞排查  
-- **生态建设**：开发 IDE 插件、制作技术主题分享、撰写项目集成案例
-- **社区支持**：解答用户问题、完善 Issue 模板、维护知识库
-
 **每一行代码都值得被尊重**，我们为所有贡献者准备了阶梯式成长路径。从基础贡献者到核心 committer，您的成长将获得全程见证与支持！
-
 
 ## 贡献指南
 
-<Tabs>
-  <Tab title="1. Fork 仓库">
-    <Card title="第一步：Fork 代码仓库" icon="code-branch">
-      浏览器访问：[https://gitee.com/log4j/pig](https://gitee.com/log4j/pig)
-      
-      <Note>
-        Fork 操作会在您的 Gitee 账号下创建 pig 项目的副本，您可以在此副本上自由开发
-      </Note>
-      
-      <img src="/images/1604289479920-db45d776-fcba-44ca-b084-d32549207af6.jpeg" height="200" alt="Fork 步骤1" />
-      
-      <img src="/images/1604289479767-5b2a63af-247d-49e0-b17b-d1898ff5ed02.jpeg" height="200" alt="Fork 步骤2" />
-    </Card>
-  </Tab>
+<Steps>
+  <Step title="第一步：Fork 代码仓库">
+    浏览器访问：[https://gitee.com/log4j/pig](https://gitee.com/log4j/pig)
+    
+    <Note>
+      Fork 操作会在您的 Gitee 账号下创建 pig 项目的副本，您可以在此副本上自由开发
+    </Note>
+    
+    <img src="/images/1604289479920-db45d776-fcba-44ca-b084-d32549207af6.jpeg" height="200" alt="Fork 步骤1" />
+    
+    <img src="/images/1604289479767-5b2a63af-247d-49e0-b17b-d1898ff5ed02.jpeg" height="200" alt="Fork 步骤2" />
+  </Step>
   
-  <Tab title="2. Clone 代码">
-    <Card title="第二步：Clone 本地仓库" icon="download">
-      使用以下命令将代码克隆到本地：
-      
-      ```shell
-      git clone https://gitee.com/{您的用户名}/pig.git
-      ```
-      
-      <Warning>
-        确保已安装 Git 并配置好 Gitee 的 SSH key 或用户名密码
-      </Warning>
-      
-      完成后进入项目目录：
-      
-      ```shell
-      cd pig
-      ```
-      
-      添加上游仓库，便于同步最新代码：
-      
-      ```shell
-      git remote add upstream https://gitee.com/log4j/pig.git
-      ```
-      
-      <img src="/images/1604289468858-e0c47103-4a6a-4b05-a97b-57eb86880d66.jpeg" height="200" alt="Clone 仓库" />
-    </Card>
-  </Tab>
+  <Step title="第二步：Clone 本地仓库">
+    使用以下命令将代码克隆到本地：
+    
+    ```shell
+    git clone https://gitee.com/{您的用户名}/pig.git
+    ```
+    
+    <img src="/images/1604289468858-e0c47103-4a6a-4b05-a97b-57eb86880d66.jpeg" height="200" alt="Clone 仓库" />
+  </Step>
   
-  <Tab title="3. 开发提交">
-    <Card title="第三步：修改并提交代码" icon="code">
-      <Warning>
-        请确保您的代码遵循项目规范并经过充分测试
-      </Warning>
-      
-      开发前同步最新代码：
-      ```shell
-      git fetch upstream
-      git checkout dev
-      git merge upstream/dev
-      ```
-      
-      创建并切换到新分支进行开发：
-      ```shell
-      git checkout -b feature/your-feature-name
-      ```
-      
-      修改代码后，提交到您的本地仓库：
-      ```shell
-      git add .
-      git commit -m "feat: 添加新功能描述"
-      ```
-      
-      推送到您的远程仓库：
-      ```shell
-      git push origin feature/your-feature-name
-      ```
-      
-      <Note>
-        commit 信息请遵循规范：
-        - feat: 新功能
-        - fix: 修复 bug
-        - docs: 文档变更
-        - style: 代码格式调整
-        - refactor: 代码重构
-        - perf: 性能优化
-        - test: 测试用例相关
-        - build: 构建系统或依赖相关
-      </Note>
-    </Card>
-  </Tab>
+  <Step title="第三步：修改并提交代码">
+    <Warning>
+      请确保您的代码遵循项目规范并经过充分测试
+    </Warning>
+    
+    修改代码后，提交到您的仓库：
+    ```shell
+    git add .
+    git commit -m "feat: 添加新功能描述"
+    git push
+    ```
+    
+    <Note>
+      commit 信息请遵循规范：
+      - feat: 新功能
+      - fix: 修复 bug
+      - docs: 文档变更
+      - style: 代码格式调整
+      - refactor: 代码重构
+      - perf: 性能优化
+      - test: 测试用例相关
+      - build: 构建系统或依赖相关
+    </Note>
+  </Step>
   
-  <Tab title="4. Pull Request">
-    <Card title="第四步：提交 Pull Request" icon="code-pull-request">
-      将您的修改提交 Pull Request 至我们的 DEV 分支。
-      
-      <img src="/images/1604289390693-e0b22e84-49e0-4c08-a584-b94225abf918.jpeg" height="200" alt="PR 步骤1" />
-      
-      <img src="/images/1604289390759-6aadfd05-d6a9-4285-9936-9c1fb051c83b.jpeg" height="200" alt="PR 步骤2" />
-      
-      <img src="/images/1604289390698-e3797238-6aaf-40d8-942d-6d1c88bb9e8f.jpeg" height="200" alt="PR 步骤3" />
-      
-      <Warning>
-        提交 PR 前请确认：
-        1. 代码已经过本地完整测试
-        2. 无明显冲突
-        3. 代码符合项目规范
-      </Warning>
-      
-      <Note>
-        提交 PR 时，请在描述中包含：
-        1. 功能/修复的详细描述
-        2. 相关的 issue 编号（如有）
-        3. 必要的截图或演示
-        4. 测试结果说明
-      </Note>
-      
-      提交后，项目维护者会审核您的代码并给出反馈。根据反馈修改代码后，PR 可能会被合并到主分支。
-    </Card>
-  </Tab>
-</Tabs>
+  <Step title="第四步：提交 Pull Request">
+    将您的修改提交 Pull Request 至我们的目标分支。
+    
+    <img src="/images/1604289390693-e0b22e84-49e0-4c08-a584-b94225abf918.jpeg" height="200" alt="PR 步骤1" />
+    
+    <img src="/images/1604289390759-6aadfd05-d6a9-4285-9936-9c1fb051c83b.jpeg" height="200" alt="PR 步骤2" />
+    
+    <img src="/images/1604289390698-e3797238-6aaf-40d8-942d-6d1c88bb9e8f.jpeg" height="200" alt="PR 步骤3" />
+    
+    <Warning>
+      提交 PR 前请确认：
+      1. 代码已经过本地完整测试
+      2. 无明显冲突
+      3. 代码符合项目规范
+    </Warning>
+    
+    <Note>
+      提交 PR 时，请在描述中包含：
+      1. 功能/修复的详细描述
+      2. 相关的 issue 编号（如有）
+      3. 必要的截图或演示
+      4. 测试结果说明
+    </Note>
+    
+    提交后，项目维护者会审核您的代码并给出反馈。根据反馈修改代码后，PR 可能会被合并到主分支。
+  </Step>
+</Steps>
 
 ## ♥️ 获取支持
 <Card title="遇到问题？" horizontal icon="link" href="https://gitee.com/log4j/pig/issues">
