fix(docs): remove JDK17 branch reference from clone commands in deployment documentation
This commit updates the deployment documentation by removing the specific branch reference 'jdk17' from the git clone commands, ensuring that users clone the default branch instead. This change aligns with the recent updates to the technology stack documentation and promotes consistency across the project.

--- a/deployment/boot.mdx
+++ b/deployment/boot.mdx
@@ -33,7 +33,7 @@ iconType: "solid"
 </Note>
 
 ```shell
-git clone https://gitee.com/log4j/pig.git -b jdk17
+git clone https://gitee.com/log4j/pig.git
 ```
 
 ### ② 执行 SQL 脚本
