--- a/deployment/quick-start.mdx
+++ b/deployment/quick-start.mdx
@@ -36,7 +36,7 @@ iconType: "solid"
 
 ### 1. 下载项目
 ```shell
-git clone https://gitee.com/log4j/pig.git -b jdk17
+git clone https://gitee.com/log4j/pig.git
 ```
 
 ### 2. 初始化数据库
