fix(docs): update online generation page link in archetype documentation to reflect new version

--- a/dev/archetype.mdx
+++ b/dev/archetype.mdx
@@ -28,7 +28,7 @@ mvn clean install
 **务必按照本文档** `包名、项目名` **进行初始化，其他请了解 pig** `feign、mybatis` **的包扫描规则，不然 bean 扫描不到！**
 </Warning>
 
-<Card title="在线下载" icon="link" href="https://pig4cloud.com/data/other/archetype.html?v=3.8.3">
+<Card title="在线进入在线生成页面" icon="link" href="https://pig4cloud.com/data/other/archetype.html?v=3.8.4">
   点击此处访问在线下载页面
 </Card>
 
