fix(docs): emphasize technical information requirements in inquiry guidelines
This commit highlights the necessity of providing specific technical details, such as PIG version, architecture type, and environment information, in the FAQ on how to ask questions. The change aims to improve the quality of inquiries and facilitate more effective support interactions.

--- a/dev/faq/how-ask.mdx
+++ b/dev/faq/how-ask.mdx
@@ -19,7 +19,7 @@ title: "技术支持提问指南"
     提问前请先搜索官方文档和已有 issues，确认问题是否已有解决方案。
   </Step>
   <Step title="收集技术信息">
-    - PIG 版本号、架构类型（单体/微服务）、代码分支、操作系统及环境信息
+    - **PIG 版本号、架构类型（单体/微服务）、代码分支、操作系统及环境信息**
     - 完整的错误日志，包括浏览器 console、network 信息，后台 IDEA 控制台错误输出等
   </Step>
   <Step title="准备问题复现">
